# foo-esp

./: .gitignore  Cargo.toml  build.rs  cfg.toml.example  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
