[package]
name = "foo-esp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

# Esp
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }

# Error
anyhow = "1"

# Log
log = "0.4"
env_logger = "0.10"

# Config
toml-cfg = "0.2.0"

[build-dependencies]
embuild  = "0.32.0"
toml-cfg = "0.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
lto = true

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
